--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -19,27 +19,27 @@
                     </figure>
                     <nav class="nav_wrapp">
                         <ul class="head_nav is-between">
-                            <li class="item_nav">
+                            <li class="item_nav active tab-1">
                                 <a href="/">
                                     home
                                 </a>
                             </li>
-                            <li class="item_nav">
+                            <li class="item_nav tab-2">
                                 <a href="/products">
                                     products
                                 </a>
                             </li>
-                            <li class="item_nav">
+                            <li class="item_nav tab-3">
                                 <a href="/news">
                                     news
                                 </a>
                             </li>
-                            <li class="item_nav">
+                            <li class="item_nav tab-4">
                                 <a href="/about-us">
                                     about us
                                 </a>
                             </li>
-                            <li class="item_nav">
+                            <li class="item_nav tab-5">
                                 <a href="/contact">
                                     contact us
                                 </a>
